--- a/.github/workflows/daily-builds.yml
+++ b/.github/workflows/daily-builds.yml
@@ -9,17 +9,8 @@ jobs:
     steps:
       - uses: actions/checkout@v1
       - name: Build image
-        run: >
-          docker build . \
-            --build-arg NODE_VERSION=12 \
-            --build-arg EXPO_VERSION=3 \
-            --tag nsollazzo/expo-dev:3
-      - name: Test image
-        run: docker run --rm nsollazzo/expo-dev:3 diagnostics
+        run: docker build . --tag nsollazzo/expo-dev
       - name: Authenticate docker
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u nsollazzo --password-stdin
       - name: Publish image
-        run: |
-          docker tag nsollazzo/expo-dev:3 nsollazzo/expo-dev:latest
-          docker push nsollazzo/expo-dev:3
-          docker push nsollazzo/expo-dev:latest
+        run: docker push nsollazzo/expo-dev:latest
